Fix for grid gap and remove button rouned from markup

--- a/src/css/pages/archive/product_archive.css
+++ b/src/css/pages/archive/product_archive.css
@@ -30,7 +30,7 @@
 .prodarchive__list{
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	gap: var(--offset-half);
+	gap: var(--offset);
 }
 
 .prodarchive__list--single{
